# urirun-connector-usb

./: README.md  local.dev.txt  pyproject.toml
.github/workflows/: ci.yml  integration-urirun-llm.yml
examples/: README.md
scripts/: ci_urirun_llm_smoke.py
tests/: test_usb_core.py
urirun_connector_usb/: __init__.py  connector.manifest.json  contracts.py  core.py
