[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-usb"
version = "0.1.0"
description = "USB device enumeration/classification connector for ifuri and urirun (usb://)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = ["urirun>=0.4.14"]

[project.optional-dependencies]
pyusb = ["pyusb>=1.2"]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://connect.ifuri.com/connectors/usb"
Repository = "https://github.com/if-uri/urirun-connector-usb"

[project.scripts]
urirun-usb = "urirun_connector_usb.core:main"

[project.entry-points."urirun.bindings"]
usb = "urirun_connector_usb.core:urirun_bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_usb*"]

[tool.setuptools.package-data]
urirun_connector_usb = ["connector.manifest.json"]
